# Project_Trinetra

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh  submission.csv  submission_bge_reranker_demo.csv  submission_metadata.yaml  submission_v1_backup.csv
.streamlit/: config.toml
app/: streamlit_app.py
artifacts/: bm25_meta.npz  bm25_tf.npz
docs/: DECK_OUTLINE.md  PLAN_REVIEW_V2.md  PROJECT_MEMORY.md
notebooks/: 01_data_profile.ipynb  02_architecture_ablations.ipynb
scripts/: evaluate.py  precompute_embeddings.py  profile_data.py  rank.py
src/redrob_ranker/: __init__.py  config.py  embeddings.py  io_utils.py  jd_spec.py  narrative.py  normalize.py  pipeline.py  reasoning.py  rerank.py  scoring.py  textmatch.py
src/redrob_ranker/features/: __init__.py  behavioral.py  geo.py  plausibility.py  role.py  semantic.py  trajectory.py
tests/: test_plausibility.py  test_reasoning.py  test_scoring.py  test_validator.py
