[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "redrob-ranker"
version = "1.0.0"
description = "Evidence-Grounded Hybrid Ranker for the Redrob Intelligent Candidate Discovery & Ranking Challenge"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
